[package]
name = "maze"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.26.0"
vulkano-win = "0.26.0"
vulkano-shaders = "0.26.0"
ash = "0.33.3"
winit = "0.25"
shaderc = "0.7"
rand = "0.8.4"
png = "0.17.2"
